# markup-tg-logger

./: .gitattributes  .gitignore  CANGELOG.md  LICENSE  README.md  README.ru.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/examples/: config.py  config_example.py  html_example.py  html_fmt_example.py  html_message_example.py  minimal_example.py  notifier_example.py  sender_example.py  traceback_example.py
src/markup_tg_logger/: __init__.py  config.py  defaults.py  exceptions.py  handler.py  resolve_object_from_config.py  types.py
src/markup_tg_logger/formatters/: __init__.py  base.py  code.py  escape.py  html.py  html_traceback.py
src/markup_tg_logger/handlers/: __init__.py  base.py
src/markup_tg_logger/interfaces/: __init__.py  message_splitter.py  notifier.py  telegram_sender.py
src/markup_tg_logger/message_splitters/: __init__.py  base.py  factory.py  html.py
src/markup_tg_logger/notifiers/: __init__.py  level.py  static.py
src/markup_tg_logger/telegram/: __init__.py  sender.py
src/markup_tg_logger/telegram_senders/: http_client.py  requests.py
src/tests/: conftest.py  test_handler.py
src/tests/formatters/: test_base.py  test_escape.py
src/tests/integration/: test_usecase.py
src/tests/message_splitters/: test_base.py  test_factory.py  test_html.py
src/tests/notifiers/: test_level.py  test_static.py
src/tests/telegram_senders/: test_http_client_sender.py  test_requests_sender.py
src/tests/test_utils/: telegram_server.py  test_telegram_server.py
