[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markup-tg-logger"
version = "0.1.3"
authors = [{ name="korandr", email="andrey.korovyansky@gmail.com" }]
description = "Telegram logging with full HTML support and optional MarkdownV2"
readme = "README.md"
dependencies = ["requests"]
requires-python = ">=3.9"
keywords = ["logging", "Telegram", "HTML", "MarkdownV2", "MarkdownV2", 'logger']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: System :: Logging",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Documentation",
    "Intended Audience :: Developers"
]

[project.urls]
Github = "https://github.com/korandr/markup-tg-logger"
Documentation = "https://github.com/korandr/markup-tg-logger/wiki"

