[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markup-tg-logger"
version = "1.0.0rc1"
authors = [{ name="korandr", email="andrey.korovyansky@gmail.com" }]
description = "Flexible integration of logging module and Telegram Bot Api with HTML support"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["logging", "Telegram", "HTML", "Markdown", "MarkdownV2", 'logger']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: System :: Logging",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Documentation",
    "Intended Audience :: Developers"
]

[project.urls]
Github = "https://github.com/korandr/markup-tg-logger"
Documentation = "https://github.com/korandr/markup-tg-logger"

[project.optional-dependencies]
requests = ["requests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
addopts = "-rsxX --tb=short --strict"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "utils: Tests of auxiliary classes used for main tests"
]